Show about history details on mobile and fix iOS layout

--- a/app/globals.css
+++ b/app/globals.css
@@ -817,3 +817,14 @@ body:not(.theme-light)::before {
     display: block;
   }
 }
+
+@supports (-webkit-touch-callout: none) {
+  main#bringer-main {
+    contain: none;
+  }
+
+  #bringer-main.bringer-min-content {
+    height: auto;
+    min-height: calc(100svh - var(--st-footer-height));
+  }
+}
